force-app/main/default/objects/Broker__c/Email__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Broker__c.Email__c'>
  <fullName>Email__c</fullName>
  <label>Email</label>
  <type>Email</type>
</CustomField>