force-app/main/default/objects/Broker__c/Mobile_Phone__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Broker__c.Mobile_Phone__c'>
  <fullName>Mobile_Phone__c</fullName>
  <label>Mobile Phone</label>
  <type>Phone</type>
</CustomField>