force-app/main/default/objects/Broker__c/Phone__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Broker__c.Phone__c'>
  <fullName>Phone__c</fullName>
  <label>Phone</label>
  <type>Phone</type>
</CustomField>