force-app/main/default/objects/Broker__c/Picture_IMG__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Broker__c.Picture_IMG__c'>
  <fullName>Picture_IMG__c</fullName>
  <formula>IMAGE( Picture__c , &quot;picture&quot; , 150, 150)</formula>
  <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
  <label>Picture</label>
  <type>Text</type>
</CustomField>