force-app/main/default/objects/Broker__c/Title__c.field-meta.xml
<CustomField xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Broker__c.Title__c'>
  <fullName>Title__c</fullName>
  <label>Title</label>
  <length>30</length>
  <type>Text</type>
</CustomField>