force-app/main/default/objects/Broker__c/All.listview-meta.xml
<ListView xmlns='urn:metadata.tooling.soap.sforce.com' fqn='Broker__c.All'>
  <fullName>All</fullName>
  <columns>NAME</columns>
  <filterScope>Everything</filterScope>
  <label>All</label>
</ListView>